--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
     <section class="trabajos" style="display: flex; justify-content: center; flex-wrap: wrap;">
       <a href="#">
         <div class="cardd">
-          <img src="/imagenes/flutter.jpg" alt="flutter">
+          <img src="imagenes/flutter.jpg" alt="flutter">
           <h4>Flutter</h4>
           <p>Proyectos hechos en Flutter</p>
         </div>
       </a>
       <a href="#">
         <div class="cardd">
-          <img src="/imagenes/spring.png" alt="SPRING">
+          <img src="imagenes/spring.png" alt="SPRING">
           <h4>Spring Framework</h4>
           <p>Proyectos hechos en Spring</p>
         </div>
       </a>
       <a href="#">
         <div class="cardd">
-          <img src="/imagenes/css.jpg" alt="CSS">
+          <img src="imagenes/css.jpg" alt="CSS">
           <h4>Diseños WEB</h4>
           <p>Proyectos hechos CON CSS</p>
         </div>
