--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <hr style="height:2px;border-width:0;color:black;background-color:gray; width: 95%; opacity: 0%;">
 
     <section id="yo">
-        <div class="contendord" style="background-color: #333; border-radius: 18px; padding: 5px; width: 50%; margin: auto;">
+        <div class="contendord" style="background-color: #333; border-radius: 18px; padding: 5px; min-height: 85%; max-width: 700px; margin: auto;">
             <div class="card border-info" style="width: 100%;color: black;  border-radius: 18px;">
                 <div class="card-header" style="font-size: 1.5em; text-align: center;">Sobre Mi</div>
                 <div class="card-body">
@@ -109,8 +109,9 @@
     </section>
     <!-- Contact Section-->
     <hr style="height:2px;border-width:0;color:black;background-color:gray; width: 95%;">
+
     <section class="page-section p-2" id="contact">
-        <div class="dentro-contacto" style="padding: 1em 2em; max-width: 40%; min-width: 30%; margin: 0 auto; background-color: #333; border-radius: 18px;">
+        <div class="dentro-contacto" style="padding: 1em 2em; min-height: 90%; max-width: 500px; margin: 0 auto; background-color: #333; border-radius: 18px;">
             <form action="prueba.php" method="post" name="form1">
                 <h1 style="text-align: center;">Contacto</h1>
                 <div class="form-group">
