--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
     </header>
     <hr style="height:2px;border-width:0;color:black;background-color:gray; width: 95%; opacity: 0%;">
 
+    <style>
+      .contendord{
+        background-color: #333; border-radius: 18px; padding: 5px; width: 50%; margin: auto;
+      }
+    </style>
+
     <section id="yo">
-        <div class="contendord" style="background-color: #333; border-radius: 18px; padding: 5px; min-height: 85%; max-width: 700px; margin: auto;">
+        <div class="contendord">
             <div class="card border-info" style="width: 100%;color: black;  border-radius: 18px;">
                 <div class="card-header" style="font-size: 1.5em; text-align: center;">Sobre Mi</div>
                 <div class="card-body">
