--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <!-- Contact Section-->
     <hr style="height:2px;border-width:0;color:black;background-color:gray; width: 95%;">
 
-    <section class="page-section p-2" id="contact">
+   <!--  <section class="page-section p-2" id="contact">
         <div class="dentro-contacto" style="padding: 1em 2em; min-height: 90%; max-width: 500px; margin: 0 auto; background-color: #333; border-radius: 18px;">
-            <form action="prueba.php" method="post" name="form1">
+            <form action="enviar.php" method="post" name="form1">
                 <h1 style="text-align: center;">Contacto</h1>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Correo Electronico</label>
@@ -131,7 +131,7 @@
                 <button type="submit" class="btn btn-dark" style="display: flex; margin:auto;" >Enviar</button>
             </form>
         </div>
-    </section>
+    </section> -->
     <!-- Footer-->
    
     <footer class="footer text-center m-5 pt-4 pb-3" style="background-color: #333; border-radius: 18px;display: block;">
@@ -155,7 +155,7 @@
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
                     <h4 class="text-uppercase mb-2">Social</h4>
-                    <a href="http://facebook.com"><p class="lead" style="color: white; text-decoration: none;">Facebook</p></a>
+                    <a href="https://www.facebook.com/profile.php?id=100002337899048"><p class="lead" style="color: white; text-decoration: none;">Facebook</p></a>
                 </div>
             </div>
             <a href="https://www.freepik.es/fotos-vectores-gratis/fondo">Vector de Fondo creado por Harryarts - www.freepik.es</a>
